--- a/src/cinetudoproject/view/VendaFXML.fxml
+++ b/src/cinetudoproject/view/VendaFXML.fxml
@@ -21,8 +21,8 @@
             </ImageView>
          </center>
       </JFXToolbar>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#9a9a9a" height="102.0" layoutX="530.0" layoutY="102.0" stroke="BLACK" strokeLineCap="BUTT" strokeType="INSIDE" width="236.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="51.0" layoutX="536.0" layoutY="145.0" stroke="BLACK" strokeLineCap="BUTT" strokeType="INSIDE" width="223.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f44336" height="102.0" layoutX="530.0" layoutY="102.0" stroke="#aeaeae" strokeLineCap="BUTT" strokeType="INSIDE" width="236.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="51.0" layoutX="536.0" layoutY="145.0" stroke="#aeaeae" strokeLineCap="BUTT" strokeType="INSIDE" width="223.0" />
       <Label fx:id="lb_diretor" layoutX="538.0" layoutY="105.0" prefHeight="35.0" prefWidth="223.0" text="Total a pagar:" textFill="WHITE" wrapText="true">
          <font>
             <Font size="28.0" />
@@ -38,12 +38,12 @@
       <ComboBox id="cb_ingressos" fx:id="cb_ingresso" layoutX="31.0" layoutY="222.0" prefHeight="43.0" prefWidth="738.0" promptText="Ingressos" />
       <Pane layoutX="31.0" layoutY="281.0" prefHeight="183.0" prefWidth="738.0">
          <children>
-            <JFXButton id="updateButton" fx:id="add_button" buttonType="RAISED" layoutX="416.0" layoutY="127.0" onAction="#addClicked" prefHeight="32.0" prefWidth="195.0" ripplerFill="#cd1b1b" style="-fx-background-color: #9a9a9a;" text="Adicionar" textFill="#f5f5f0" visible="false">
+            <JFXButton id="updateButton" fx:id="add_button" buttonType="RAISED" layoutX="416.0" layoutY="127.0" onAction="#addClicked" prefHeight="32.0" prefWidth="195.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Adicionar" textFill="#f5f5f0" visible="false">
                <font>
                   <Font size="19.0" />
                </font>
             </JFXButton>
-            <JFXButton id="updateButton" fx:id="can_button" buttonType="RAISED" cancelButton="true" layoutX="111.0" layoutY="127.0" onAction="#canClicked" prefHeight="32.0" prefWidth="195.0" ripplerFill="#cd1b1b" style="-fx-background-color: #9a9a9a;" text="Cancelar" textFill="#f5f5f0" visible="false">
+            <JFXButton id="updateButton" fx:id="can_button" buttonType="RAISED" cancelButton="true" layoutX="111.0" layoutY="127.0" onAction="#canClicked" prefHeight="32.0" prefWidth="195.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Cancelar" textFill="#f5f5f0" visible="false">
                <font>
                   <Font size="19.0" />
                </font>
@@ -51,19 +51,19 @@
             <ComboBox fx:id="cb_horario" disable="true" layoutX="71.0" layoutY="14.0" prefHeight="43.0" prefWidth="276.0" promptText="Horário" />
             <ComboBox fx:id="cb_promocao" disable="true" layoutX="71.0" layoutY="68.0" prefHeight="43.0" prefWidth="276.0" promptText="Promoção" />
             <ComboBox fx:id="cb_tipo" disable="true" layoutX="376.0" layoutY="14.0" prefHeight="43.0" prefWidth="276.0" promptText="Tipo" />
-            <JFXButton id="updateButton" fx:id="assento_button" buttonType="RAISED" disable="true" layoutX="376.0" layoutY="71.0" onAction="#assentoClicked" prefHeight="38.0" prefWidth="276.0" ripplerFill="#cd1b1b" style="-fx-background-color: #9a9a9a;" text="Assento" textFill="#f5f5f0">
+            <JFXButton id="updateButton" fx:id="assento_button" buttonType="RAISED" disable="true" layoutX="376.0" layoutY="71.0" onAction="#assentoClicked" prefHeight="38.0" prefWidth="276.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Assento" textFill="#f5f5f0">
                <font>
                   <Font size="19.0" />
                </font>
             </JFXButton>
          </children>
       </Pane>
-      <JFXButton id="updateButton" fx:id="cancel_button" buttonType="RAISED" layoutX="158.0" layoutY="484.0" onAction="#cancelClicked" prefHeight="38.0" prefWidth="209.0" ripplerFill="#cd1b1b" style="-fx-background-color: #9a9a9a;" text="Cancelar" textFill="#f5f5f0">
+      <JFXButton id="updateButton" fx:id="cancel_button" buttonType="RAISED" layoutX="158.0" layoutY="484.0" onAction="#cancelClicked" prefHeight="38.0" prefWidth="209.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Cancelar" textFill="#f5f5f0">
          <font>
             <Font size="19.0" />
          </font>
       </JFXButton>
-      <JFXButton id="updateButton" fx:id="buy_button" buttonType="RAISED" layoutX="426.0" layoutY="484.0" onAction="#buyClicked" prefHeight="38.0" prefWidth="209.0" ripplerFill="#cd1b1b" style="-fx-background-color: #9a9a9a;" text="Confirmar Compra" textFill="#f5f5f0">
+      <JFXButton id="updateButton" fx:id="buy_button" buttonType="RAISED" layoutX="426.0" layoutY="484.0" onAction="#buyClicked" prefHeight="38.0" prefWidth="209.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Confirmar Compra" textFill="#f5f5f0">
          <font>
             <Font size="19.0" />
          </font>
