--- a/src/cinetudoproject/view/VendaFXML.fxml
+++ b/src/cinetudoproject/view/VendaFXML.fxml
@@ -51,11 +51,7 @@
             <ComboBox fx:id="cb_horario" disable="true" layoutX="71.0" layoutY="14.0" prefHeight="43.0" prefWidth="276.0" promptText="Horário" />
             <ComboBox fx:id="cb_promocao" disable="true" layoutX="71.0" layoutY="68.0" prefHeight="43.0" prefWidth="276.0" promptText="Promoção" />
             <ComboBox fx:id="cb_tipo" disable="true" layoutX="376.0" layoutY="14.0" prefHeight="43.0" prefWidth="276.0" promptText="Tipo" />
-            <JFXButton id="updateButton" fx:id="assento_button" buttonType="RAISED" disable="true" layoutX="376.0" layoutY="71.0" onAction="#assentoClicked" prefHeight="38.0" prefWidth="276.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Assento" textFill="#f5f5f0">
-               <font>
-                  <Font size="19.0" />
-               </font>
-            </JFXButton>
+            <ComboBox fx:id="cb_assento" disable="true" layoutX="376.0" layoutY="70.0" prefHeight="43.0" prefWidth="276.0" promptText="Assentos" />
          </children>
       </Pane>
       <JFXButton id="updateButton" fx:id="cancel_button" buttonType="RAISED" layoutX="158.0" layoutY="484.0" onAction="#cancelClicked" prefHeight="38.0" prefWidth="209.0" ripplerFill="#cd1b1b" style="-fx-background-color: #F44336;" text="Cancelar" textFill="#f5f5f0">
