--- a/src/cinetudoproject/view/MainGerente.fxml
+++ b/src/cinetudoproject/view/MainGerente.fxml
@@ -16,6 +16,11 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="626.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.MainGerenteController">
    <children>
+      <ImageView fx:id="bigImage" fitHeight="1511.0" fitWidth="1000.0" layoutY="-265.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../img/angrybirds.jpg" />
+         </image>
+      </ImageView>
       <JFXToolbar prefHeight="77.0" prefWidth="1000.0" style="-fx-background-color: #FFFFFF;">
          <center>
             <ImageView fitHeight="47.0" fitWidth="113.0" pickOnBounds="true" preserveRatio="true" translateY="5.0" BorderPane.alignment="CENTER">
@@ -35,6 +40,6 @@
             <JFXHamburger fx:id="hamburguer" translateX="20.0" BorderPane.alignment="CENTER" />
          </left>
       </JFXToolbar>
-      <JFXDrawer fx:id="drawer" defaultDrawerSize="200.0" layoutY="77.0" prefHeight="552.0" prefWidth="255.0" />
+      <JFXDrawer fx:id="drawer" defaultDrawerSize="200.0" layoutY="77.0" prefHeight="552.0" prefWidth="198.0" />
    </children>
 </AnchorPane>
