--- a/src/cinetudoproject/view/SidePanelContentG.fxml
+++ b/src/cinetudoproject/view/SidePanelContentG.fxml
@@ -6,15 +6,18 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="332.0" prefWidth="223.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentGController">
+<VBox prefHeight="462.0" prefWidth="223.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentGController">
    <children>
       <JFXButton fx:id="b1" buttonType="RAISED" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Inicio" />
       <JFXButton fx:id="bsessao" buttonType="RAISED" onAction="#cadastrarSessao" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Sessao" />
       <JFXButton fx:id="b2" buttonType="RAISED" layoutX="10.0" layoutY="123.0" onAction="#cadastrarFilme" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Filme" />
-      <JFXButton fx:id="b21" buttonType="RAISED" onAction="#cadastrarFuncionario" prefHeight="57.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Funcionario" />
-      <JFXButton fx:id="cadastrar" buttonType="RAISED" layoutX="10.0" layoutY="197.0" onAction="#cadastrarSala" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Sala" />
-      <JFXButton fx:id="cadastrar1" buttonType="RAISED" onAction="#cadastrarPromocao" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Promoção" />
-      <JFXButton fx:id="exit" buttonType="RAISED" layoutX="10.0" layoutY="271.0" onAction="#exit" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Sair" />
       <JFXButton fx:id="b22" buttonType="RAISED" onAction="#updateFilme" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Atualizar/Deletar Filme" />
+      <JFXButton fx:id="b21" buttonType="RAISED" onAction="#cadastrarFuncionario" prefHeight="57.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Funcionario" />
+      <JFXButton fx:id="b2211" buttonType="RAISED" onAction="#updateFuncionario" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Atualizar Funcionário" />
+      <JFXButton fx:id="cadastrar" buttonType="RAISED" layoutX="10.0" layoutY="197.0" onAction="#cadastrarSala" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Sala" />
+      <JFXButton fx:id="b22111" buttonType="RAISED" onAction="#updateSala" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Atualizar/Deletar Sala" />
+      <JFXButton fx:id="cadastrar1" buttonType="RAISED" onAction="#cadastrarPromocao" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Cadastrar Promoção" />
+      <JFXButton fx:id="b22112" buttonType="RAISED" onAction="#updatePromocao" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Atualizar/Deletar Promocao" />
+      <JFXButton fx:id="exit" buttonType="RAISED" layoutX="10.0" layoutY="271.0" onAction="#exit" prefHeight="55.0" prefWidth="223.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Sair" />
    </children>
 </VBox>
